Se agregaron los archivos de noticias internacionales, deportes y contacto

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 </head>
 <body>
     <header>
-        <a href="/index.html">Inicio</a>
-        <a href="/deportes.html">Deportes</a>
-        <a href="/internacional.html">internacional</a>
-        <a href="/contacto.html">Contacto</a>
+        <nav>
+            <a href="/index.html">Inicio</a>
+            <a href="/deportes.html">Deportes</a>
+            <a href="/internacional.html">internacional</a>
+            <a href="/contacto.html">Contacto</a>
+        </nav>
     </header>
 
     <main>
