Se agregó nueva informacion a los diferentes archivos HTML

--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,99 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="/index.html">Inicio</a>
+            <a href="/deportes.html">Deportes</a>
+            <a href="/internacional.html">internacional</a>
+            <a href="/contacto.html">Contacto</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Ponte en contacto con nosotros</h1>
+        <p>Para nosotros es muy importante saber tu opinión por favor completa el siguiente formulario</p>
+        <form action="#" method="GET" enctype="multipart/form-data">
+            <div>
+            <label for="first-name">Nombre</label>
+                <input
+                    type="text"
+                    name="first-name"
+                    id="first-name"
+                    placeholder="Escribe tu nombre"
+                    maxlength="20"
+                    minlength="4"
+                >
+            </div>
+            <br>
+            <div>
+                <label for="last-name">Apellidos</label>
+                    <input
+                        type="text"
+                        name="last-name"
+                        id="last-name"
+                        placeholder="Escribe tus apellidos"
+                        maxlength="30"
+                        minlength="4"
+                    >
+            </div>
+            <br>
+            <div>
+                <label for="email">Correo electrónico</label>
+                <input type="email" name="email" id="email">
+            </div>
+            <br>
+            <div>
+                <label for="age">Edad</label>
+                <input
+                    type="number"
+                    name="age"
+                    id="age"
+                >
+            </div>
+            <br>
+            <div>
+                <label for="gender">Género</label>
+                <select name="gender" id="gender">
+                    <option value="male">Masculino</option>
+                    <option value="female">Femenino</option>
+                    <option value="other">Otro</option>
+                </select>
+            </div>
+            <br>
+            <div>
+                <h4>Elige tu deporte favorito</h4>
+                <label for="futbol">Futbol</label>
+                <input type="checkbox" name="sports" id="futbol" value="futbol">
+                <label for="basket">Basketball</label>
+                <input type="checkbox" name="sports" id="basket" value="basket">
+            </div>
+            <div>
+                <h4>Elige de donde quieres obtener noticias internacionales</h4>
+                <label for="futbol">Estados Unidos</label>
+                <input type="checkbox" name="sports" id="futbol" value="futbol">
+                <label for="basket">Europa</label>
+                <input type="checkbox" name="sports" id="basket" value="basket">
+            </div>
+            <br>
+            <br>
+            <div>
+                <h4>
+                    Sube alguna noticia que quieras que publiquemos <span>
+                        <small>(Solo aceptamos formato PDF)</small>
+                    </span>
+                </h4>
+                <label for="file">Sube tu archivo</label>
+                <input type="file" name="file" id="file" accept=".pdf">
+            </div>
+            <br>
+            <input type="submit" value="Enviar datos">
+        </form>
+    </main>
+    <footer>
+        <a href="/index.html">Inicio</a>
+        <a href="/deportes.html">Deportes</a>
+        <a href="/internacional.html">internacional</a>
+        <a href="/contacto.html">Contacto</a>
+    </footer>
 </body>
 </html>
