--- a/internacional.html
+++ b/internacional.html
@@ -75,5 +75,11 @@
             </p>
         </article>
     </section>
+    <footer>
+        <a href="/index.html">Inicio</a>
+        <a href="/deportes.html">Deportes</a>
+        <a href="/internacional.html">internacional</a>
+        <a href="/contacto.html">Contacto</a>
+    </footer>
 </body>
 </html>
