Se agregan archivos css y actualización de información

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
     <title>DevsNews</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
     <main>
         <div>
             <figure>
-                <img src="" alt="Logo">
+                <img class="logo" src="/img/logo.svg" alt="Logo">
             </figure>
         </div>
         <h1>
@@ -37,20 +38,20 @@
                 </h3>
                 <small>DEPORTES</small>
                 <figure>
-                    <img src="" alt="">
+                    <img src="/img/champions.jpg" alt="Imagen de la copa de la champions league">
                 </figure>
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid optio tenetur necessitatibus repudiandae repellat consequatur aliquam temporibus accusantium pariatur, incidunt neque? Aspernatur ea, aut voluptas impedit maxime voluptate! Laboriosam soluta odit veritatis non voluptates? Neque deleniti facilis veniam aspernatur consequatur optio at, aut ratione sunt modi sapiente, eos debitis et quam odit minima illum! Fugit quis sunt earum? Id qui magnam esse asperiores ex minus voluptatibus sapiente ad maxime, ducimus molestias aspernatur quod sequi voluptatum quisquam quas molestiae sit reprehenderit reiciendis deserunt aut animi modi eaque. Omnis culpa, reiciendis asperiores eum mollitia, aliquam voluptatem sit sint nemo, saepe modi vero.
                 </p>
             </article>
-
+            <hr>
             <article>
                 <h3>
                     Las mejores jugadas de Messi en la temporada 
                 </h3>
                 <small>DEPORTES</small>
                 <figure>
-                    <img src="" alt="">
+                    <img src="/img/messi.jpg" alt="Lionel Messi">
                 </figure>
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid optio tenetur necessitatibus repudiandae repellat consequatur aliquam temporibus accusantium pariatur, incidunt neque? Aspernatur ea, aut voluptas impedit maxime voluptate! Laboriosam soluta odit veritatis non voluptates? Neque deleniti facilis veniam aspernatur consequatur optio at, aut ratione sunt modi sapiente, eos debitis et quam odit minima illum! Fugit quis sunt earum? Id qui magnam esse asperiores ex minus voluptatibus sapiente ad maxime, ducimus molestias aspernatur quod sequi voluptatum quisquam quas molestiae sit reprehenderit reiciendis deserunt aut animi modi eaque. Omnis culpa, reiciendis asperiores eum mollitia, aliquam voluptatem sit sint nemo, saepe modi vero.
@@ -62,7 +63,7 @@
                 </h3>
                 <small>INTERNACIONAL</small>
                 <figure>
-                    <img src="" alt="">
+                    <img src="/img/trump.jpg" alt="presidente Trump">
                 </figure>
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid optio tenetur necessitatibus repudiandae repellat consequatur aliquam temporibus accusantium pariatur, incidunt neque? Aspernatur ea, aut voluptas impedit maxime voluptate! Laboriosam soluta odit veritatis non voluptates? Neque deleniti facilis veniam aspernatur consequatur optio at, aut ratione sunt modi sapiente, eos debitis et quam odit minima illum! Fugit quis sunt earum? Id qui magnam esse asperiores ex minus voluptatibus sapiente ad maxime, ducimus molestias aspernatur quod sequi voluptatum quisquam quas molestiae sit reprehenderit reiciendis deserunt aut animi modi eaque. Omnis culpa, reiciendis asperiores eum mollitia, aliquam voluptatem sit sint nemo, saepe modi vero.
@@ -74,7 +75,7 @@
                 </h3>
                 <small>INTERNACIONAL</small>
                 <figure>
-                    <img src="" alt="">
+                    <img src="/img/covid19.jpg" alt="Corona virus célula">
                 </figure>
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid optio tenetur necessitatibus repudiandae repellat consequatur aliquam temporibus accusantium pariatur, incidunt neque? Aspernatur ea, aut voluptas impedit maxime voluptate! Laboriosam soluta odit veritatis non voluptates? Neque deleniti facilis veniam aspernatur consequatur optio at, aut ratione sunt modi sapiente, eos debitis et quam odit minima illum! Fugit quis sunt earum? Id qui magnam esse asperiores ex minus voluptatibus sapiente ad maxime, ducimus molestias aspernatur quod sequi voluptatum quisquam quas molestiae sit reprehenderit reiciendis deserunt aut animi modi eaque. Omnis culpa, reiciendis asperiores eum mollitia, aliquam voluptatem sit sint nemo, saepe modi vero.
