--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
             <a href="/contacto.html">Contacto</a>
         </nav>
     </header>
-
+    <div>
+        <figure>
+            <img class="logo" src="/img/logo.svg" alt="Logo">
+        </figure>
+    </div>
+    <div>
+        <figure>
+            <img src="/img/banner.jpg" alt="banner principal">
+        </figure>
+    </div>
     <main>
-        <div>
-            <figure>
-                <img class="logo" src="/img/logo.svg" alt="Logo">
-            </figure>
-        </div>
         <h1>
             Noticias del mundo de los desarrolladores
         </h1>
